--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes Sociais</title>
+    <title>Filmes</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 </head>
 <body>
     <header>
-        <h1>Relatório das redes sociais</h1>
+        <h1>Relatório dos filmes </h1>
         <nav>
-            <a href="index.html">Mundo</a>
-            <a href="#">Minha escola</a>
+            <a href="index.html">Minha escola</a>
+            <a href="#">Minha sala</a>
         </nav>
     </header>
     <main class="graficos-section">
